# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "sml_py_binary")

package(default_visibility = ["//visibility:public"])

sml_py_binary(
    name = "Join-MM-64",
    srcs = ["Join-MM-64.py"],
    deps = [
        "//spu/intrinsic:all_intrinsics",
    ],
)

sml_py_binary(
    name = "Join-MM-32",
    srcs = ["Join-MM-32.py"],
    deps = [
        "//spu/intrinsic:all_intrinsics",
    ],
)

sml_py_binary(
    name = "Join-OM",
    srcs = ["Join-OM.py"],
    deps = [
        "//spu/intrinsic:all_intrinsics",
    ],
)

sml_py_binary(
    name = "Join-MM",
    srcs = ["Join-MM.py"],
    deps = [
        "//spu/intrinsic:all_intrinsics",
    ],
)
sml_py_binary(
    name = "OSE",
    srcs = ["OSE.py"],
    deps = [
        "//spu/intrinsic:all_intrinsics",
    ],
)
